# specforge_PoC

./: .gitignore  .gitmodules  README.md  compo_dockerfile  configs.ini  configs_v2.ini  deepspeed_config_zero3.json  default.ini  demo.py  demo_sglang_inference.py  demo_sglang_model.py  draco_and_sglang_dockerfile  eagle_v2_dockerfile  grid_search.sh  sgl_timer.patch  specforge_het_and_sglang_dockerfile  upload_utils.sh
compo/: __init__.py  config.py  data_load.py  model_load.py  requirements.txt  specforge_lm.py  sys_prompts.py
compo/models/: __init__.py
compo/models/speculative_qwen3/: modeling_speculative_qwen3.py
compo/speculative_decoding/: base.py  model.py
compo/speculative_decoding/vanilla/: vanilla.py
demo/: sglang_inference.py
draco/: __init__.py  config.py  data_load__eagle.py  model_load.py  sglang_adapter.py  sglang_adapter_utils.py  sglang_datagen.py  train.py
draco/models/: __init__.py
draco/models/speculative_llama/: chat_template.jinja2
draco/models/speculative_qwen3/: modeling_speculative_qwen3.py
draco/speculative_decoding/: base_hf.py
draco/speculative_decoding/eagle_v2/: eagle_v2.py
draco/speculative_decoding/vanilla/: modeling.py
draco/utils/: timer.py
scripts/: docker_utils.sh  experiment-acceptlens-histogram.sh  experiment-bs1timecost.sh  experiment-different-gpus.sh  experiment-multi-layers.sh  experiment-pondering.sh  experiment_utils.sh  grid_search.sh  log2tab.py
scripts/flash_attn/: pytorch_extension_utils.h
scripts/sgl_kernel/: CMakeLists.txt
sgl_kernel_patch/: CMakeLists-12.0.txt  CMakeLists-9.0.txt  CMakeLists.txt  __init__.py  common_extension.cc
specforge_het/: configs.py  data_gen.py  data_load.py  debug.py  inference.py  model_load.py  requirements.txt  run_training.py  sglang_adapter.py  sglang_adapter_mixin.py  sglang_adapter_utils.py  specforge_lm.py  timer.py  train.py  utils.py
specforge_het/models/: __init__.py
specforge_het/models/algorithms/: eagle_v2.py  experimental.py
specforge_het/models/speculative_llama/: modeling_speculative_llama.py
specforge_het/models/speculative_qwen3/: chat_template.jinja2  modeling_speculative_qwen3.py  modeling_speculative_qwen3_for_sglang.py
specforge_het/models/speculative_qwen3_moe/: chat_template.jinja2  modeling_speculative_qwen3_moe.py
tests/: config.py  configs.ini  heterogeneous_speculative_modeling.json  heterogeneous_speculative_modeling.py
